http://jira.bytatech.com:8080/browse/IN-10911

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -19,8 +19,7 @@
       "count": "Count",
       "name": "Name",
       "level": "Level",
-      "attendedExam": "Attended Exam",
-      "question": "Question"
+      "attendedExam": "Attended Exam"
     }
   }
 }
