--- a/src/main/webapp/i18n/en/question.json
+++ b/src/main/webapp/i18n/en/question.json
@@ -19,8 +19,7 @@
       "question": "Question",
       "questionlevel": "Questionlevel",
       "answer": "Answer",
-      "qnOption": "Qn Option",
-      "exam": "Exam"
+      "qnOption": "Qn Option"
     }
   }
 }
